# my-neovim-setup

./: .stylua.toml  init.lua  lazy-lock.json
lua/nishant/: lazy.lua
lua/nishant/core/: init.lua  keymaps.lua  options.lua
lua/nishant/plugins/: alpha.lua  bufferline.lua  code_runner.lua  treesitter.lua
lua/nishant/plugins/lsp/: mason.lua
programming/: CMakeLists.txt  main  main.cpp  main.py
programming/.cache/clangd/index/: main.cpp.F83565E7A54C0F8C.idx
